JMeter modules improvements. Removed some redundancies, inconsistencies, bad practices, boiler plate code, typos, dependency loops.