@@ -1,6 +1,9 @@
 package ca.etsmtl.taf.performance.jmeter.model;
 
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.io.IOException;
@@ -9,7 +12,11 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 
 @Data
+@NoArgsConstructor
+@AllArgsConstructor
+@SuperBuilder
 public abstract class TestPlanBase {
+
     protected String nbThreads;
     protected String rampTime;
     protected String duration;
@@ -18,74 +25,13 @@ public abstract class TestPlanBase {
     protected String method;
     protected String loop;
 
-    protected TestPlanBase() {
-    }
-
-    protected TestPlanBase(String nbThreads, String rampTime, String duration, String domain, String port, String method, String loop) {
-        this.nbThreads = nbThreads;
-        this.rampTime = rampTime;
-        this.duration = duration;
-        this.domain = domain;
-        this.port = port;
-        this.method = method;
-        this.loop = loop;
-    }
-
-    public abstract String getLoop();
-
-    public abstract void setLoop(String loop);
-
-    public abstract String getNbThreads();
-
-    public abstract void setNbThreads(String nbThreads);
-
-    public String getRampTime() {
-        return rampTime;
-    }
-
-    public void setRampTime(String rampTime) {
-        this.rampTime = rampTime;
-    }
-
-    public String getDuration() {
-        return duration;
-    }
-
-    public void setDuration(String duration) {
-        this.duration = duration;
-    }
-
-    public String getDomain() {
-        return domain;
-    }
-
-    public void setDomain(String domain) {
-        this.domain = domain;
-    }
-
-    public String getPort() {
-        return port;
-    }
-
-    public void setPort(String port) {
-        this.port = port;
-    }
-
-    public void setMethod(String method) {
-        this.method = method;
-    }
-
-    // Other getters and setters for common fields
-
-    public abstract String getMethod();
-
     public abstract void generateTestPlan();
 
     protected void replaceAndSaveVariables(String filePath, String target, String templateKey) {
         try {
-            String xmlContent = new String(Files.readAllBytes(Paths.get(filePath)), StandardCharsets.UTF_8);
+            String xmlContent = Files.readString(Paths.get(filePath));
             xmlContent = replaceVariables(xmlContent, templateKey);
-            Files.write(Paths.get(target), xmlContent.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(Paths.get(target), xmlContent);
         } catch (IOException e) {
             e.printStackTrace();
         }
